--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,7 @@
 {
     "rewrites": [
-      { "source": "/unsubscribe", "destination": "/unsubscribe.html" }
+      { "source": "/unsubscribe", "destination": "/unsubscribe.html" },
+      { "source": "/Kevin_Bradon_2025_June_Sync", "destination": "/schedule.html"}
     ]
   }
   
